Создано с помощью Colaboratory

--- a/метод_секущих.ipynb
+++ b/метод_секущих.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "метод секущих.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO79sjOfVlvXBZPwQoVy9bT",
+      "authorship_tag": "ABX9TyNTGBD84adRJ6XHWNhxZuLg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "eps=0.01\n",
         "n=100"
       ],
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
           "height": 282
         },
         "id": "g4BDoMnw7eXU",
-        "outputId": "8d1f942b-cc92-4b32-fe1b-30c230f04179"
+        "outputId": "a5d79ea0-e7d7-4448-ee00-67fcf2649337"
       },
       "source": [
         "ff = np.vectorize(f)\n",
@@ -119,17 +119,17 @@
         "y = ff(x)\n",
         "plt.plot(x,y)\n"
       ],
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7efc092be6d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f632e178c10>]"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -170,7 +170,7 @@
       },
       "source": [
         "\n",
-        "def secantMethod(f,a,b,iter):\n",
+        "def secantMethod(f,x0,x1,iter):\n",
         "#первый корень\n",
         "  #x0 = (a + b) / 2\n",
         "  #x1=a\n",
@@ -178,8 +178,8 @@
         "  #x0=6\n",
         "  #x1=4\n",
         "#третий корень\n",
-        "  x0=8\n",
-        "  x1=1\n",
+        "  #x0=8\n",
+        "  #x1=1\n",
         "\n",
         "  xi=(x0*f(x1)-x1*f(x0))/(f(x1)-f(x0))\n",
         "  #print(xi)\n",
@@ -191,8 +191,85 @@
         "    #print(xi)\n",
         "  return xi"
       ],
-      "execution_count": 46,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LYw2FLjhK_n2"
+      },
+      "source": [
+        "первый корень"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ALtkaSm3K5Zn",
+        "outputId": "80e9e213-f9af-4526-fa29-1687d4ca28b0"
+      },
+      "source": [
+        "x0 = (a + b) / 2\n",
+        "x1=a\n",
+        "print(secantMethod(f,x0,x1,n))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4908428447850364\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PLC5B8MxLMre"
+      },
+      "source": [
+        "второй корень"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hsF-AFnELFhI",
+        "outputId": "1e81263f-bcdd-422b-db7c-afdc0d715454"
+      },
+      "source": [
+        "x0=6\n",
+        "x1=4\n",
+        "print(secantMethod(f,x0,x1,n))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.041758688058204\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fIP03LFjLQeJ"
+      },
+      "source": [
+        "третий корень"
+      ]
     },
     {
       "cell_type": "code",
@@ -201,18 +278,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OH3txCcE6OJ4",
-        "outputId": "a65ebfd6-053a-4fd2-f1e6-d604fd0949bb"
+        "outputId": "b5882ed5-71b5-45f2-ceea-3aa89dd64b66"
       },
       "source": [
-        "print(secantMethod(f,a,b,n))"
+        "x0=8\n",
+        "x1=6\n",
+        "print(secantMethod(f,x0,x1,n))"
       ],
-      "execution_count": 47,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5.041873798337993\n"
+            "7.440960554406243\n"
           ]
         }
       ]
