Создано с помощью Colaboratory

--- a/метод_Симпсона.ipynb
+++ b/метод_Симпсона.ipynb
@@ -6,7 +6,7 @@
       "name": "метод Симпсона.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhVw1knepLKaPQEQqc3gzD",
+      "authorship_tag": "ABX9TyN4s1kYwydqsVPNgM25I/Sz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,11 @@
       },
       "source": [
         "import numpy as np\n",
-        "import math"
+        "import math\n",
+        "import scipy.integrate as integrate\n",
+        "from scipy.integrate import quad"
       ],
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -78,11 +80,37 @@
         "\n",
         "a=1\n",
         "b=8\n",
-        "n=2000001\n",
+        "n=200\n",
         "h = (b - a) / n #шаг"
       ],
-      "execution_count": 4,
+      "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quad(f,a,b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "laTvEHEM9sKf",
+        "outputId": "940c5520-d10a-483c-9c7a-da5acd1bbffb"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8.896096024361036, 4.09323792630144e-08)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -131,7 +159,7 @@
       "metadata": {
         "id": "JlWI2CiUsoIK"
       },
-      "execution_count": 5,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -144,19 +172,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SIQEUDwEtxPp",
-        "outputId": "31f39c84-7fdf-4cfc-db08-89565a27fb50"
+        "outputId": "02f12b74-36ed-4faf-a449-381f04989bf6"
       },
-      "execution_count": 10,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5.207357901880342"
+              "5.207354966937979"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 44
         }
       ]
     },
@@ -187,7 +215,7 @@
       "metadata": {
         "id": "iSN5-6ESu6_M"
       },
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -200,19 +228,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RDNf5r3svKCH",
-        "outputId": "6aa759ec-8e8a-4eaf-c3d7-ad573e143afd"
+        "outputId": "da7007ba-97e4-49e5-dc0e-3c8b94de031f"
       },
-      "execution_count": 17,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.7015702928124767"
+              "2.5376526530911705"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 46
         }
       ]
     },
@@ -263,11 +291,35 @@
         "def simpson(f,a,b,n):\n",
         "  sum=0.0\n",
         "  for i in range(1,n-1,2):\n",
-        "    sum+=h/3*(f(a+(i-1)*h)+4*f(a+i*h)+f(a+(i+1)*h))  \n",
-        "  return sum"
+        "    sum+=h/3*(f(a+(i-1)*h)+4*f(a+i*h)+f(a+(i+1)*h)) \n",
+        "  e=(8.896-sum) \n",
+        "  return sum, e"
       ],
-      "execution_count": 6,
+      "execution_count": 58,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(simpson(f,a,b,n)) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CmDxagNMBYtU",
+        "outputId": "5311b5e0-991d-4f67-f8a1-2b110a3780d3"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(8.712073497717128, 0.18392650228287266)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -301,29 +353,29 @@
       "metadata": {
         "id": "DAaAYk16w6e4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "n=2000000\n",
-        "print(simpson(f,a,b,n)) "
+        "\n",
+        "print(simpson_ver2(f,a,b,n)) "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PuUbWtoMxT3u",
-        "outputId": "79f97abd-9816-4608-b0d1-f0951ab8a568"
+        "outputId": "c033af39-9519-4ab4-ab96-1e584774b3fd"
       },
-      "execution_count": 26,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8.896066551766959\n"
+            "4.448047963055675\n"
           ]
         }
       ]
@@ -347,29 +399,6 @@
       "metadata": {
         "id": "zDZ9e8s7w91P"
       }
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QDZLaKTT5gJ_",
-        "outputId": "9abc9829-7dcb-4cf3-a28f-5f88ea8dd0a8"
-      },
-      "source": [
-        "print(simpson(f,a,b,n)) \n"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8.896086200100592\n"
-          ]
-        }
-      ]
     }
   ]
 }
